--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "install:all": "npm install && cd client && npm install && cd ../server && npm install"
   },
   "devDependencies": {
+    "@types/node": "^22.9.0",
     "concurrently": "^8.2.2"
   },
   "dependencies": {
