--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "async-monitor.js": "^1.1.13",
     "cors": "^2.8.5",
     "express": "^4.21.1"
   }
