--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-resizable-panels": "^2.0.12",
+    "reactflow": "^11.10.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
