--- a/package.json
+++ b/package.json
@@ -1,19 +1,35 @@
 {
-  "name": "editor-workspace",
-  "private": true,
-  "version": "1.0.0",
-  "type": "module",
-  "scripts": {
-    "client": "cd client && npm run dev",
-    "server": "cd server && node --watch index.js",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "install:all": "npm install && cd client && npm install && cd ../server && npm install"
-  },
-  "devDependencies": {
-    "@types/node": "^22.9.0",
-    "concurrently": "^8.2.2"
-  },
-  "dependencies": {
-    "@vitejs/plugin-react": "^4.3.3"
-  }
+	"name": "editor-workspace",
+	"private": true,
+	"version": "1.0.0",
+	"type": "module",
+	"scripts": {
+		"dev:client": "cd client && npm run dev",
+		"dev:server": "cd server && node --watch index.js",
+		"dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+		"install:all": "npm install && cd client && npm install && cd ../server && npm install",
+		"rm:all": "npm run rm:client && npm run rm:server && npm run rm:root",
+		"rm:client": "cd client && rm -rf node_modules package-lock.json",
+		"rm:root": "cd client && rm -rf node_modules package-lock.json",
+		"rm:server": "cd client && rm -rf node_modules package-lock.json",
+		"test:watch": "jest --watch",
+		"test": "jest"
+	},
+	"devDependencies": {
+		"@testing-library/jest-dom": "^6.x.x",
+		"@testing-library/react": "^14.x.x",
+		"@testing-library/user-event": "^14.x.x",
+		"@types/jest": "^29.x.x",
+		"@types/node": "^22.9.0",
+		"@types/testing-library__react": "^10.x.x",
+		"concurrently": "^8.2.2",
+		"jest": "^29.x.x",
+		"jest-environment-jsdom": "^29.7.0",
+		"ts-jest": "^29.2.5"
+	},
+	"dependencies": {
+		"@vitejs/plugin-react": "^4.3.3",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1"
+	}
 }
