--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
+		"bolt": "npm install && cd client && npm install tailwindcss && cd ../server && npm install express cors",
 		"dev:client": "cd client && npm run dev",
 		"dev:server": "cd server && node --watch index.js",
 		"dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
